[gd_scene load_steps=5 format=2]

[ext_resource path="res://Icons++/mobileButton_glow.png" type="Texture" id=1]
[ext_resource path="res://Icons++/mobileButton.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MobileControl.gd" type="Script" id=3]
[ext_resource path="res://Icons++/restartButton.png" type="Texture" id=4]

[node name="MobileControl" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="up" type="TouchScreenButton" parent="."]
position = Vector2( 1247.34, 520.431 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2( -118.794, 720.812 )
rotation = -1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2( 335.068, 522.092 )
rotation = 1.5708
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="restart" type="TouchScreenButton" parent="."]
position = Vector2( 1309.56, -166.877 )
scale = Vector2( 0.731298, 0.731298 )
normal = ExtResource( 4 )

[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="released" from="up" to="." method="_on_up_released"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="released" from="left" to="." method="_on_left_released"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="released" from="right" to="." method="_on_right_released"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
